--- a/ADD/ADD/ADD.vcxproj
+++ b/ADD/ADD/ADD.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tenths2.cpp" />
+    <ClCompile Include="1067_Polynomial_s3.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
