--- a/ADD/ADD/ADD.vcxproj.filters
+++ b/ADD/ADD/ADD.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tenths2.cpp">
+    <ClCompile Include="1067_Polynomial_s3.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
