--- a/ADD/ADD/ADD.vcxproj.filters
+++ b/ADD/ADD/ADD.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1223_lline4water_s4.cpp">
+    <ClCompile Include="Arrays.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
