--- a/ADD/ADD/ADD.vcxproj
+++ b/ADD/ADD/ADD.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1223_lline4water_s4.cpp" />
+    <ClCompile Include="Arrays.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
